--- a/src/Resources/app/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.html.twig
+++ b/src/Resources/app/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.html.twig
@@ -2,6 +2,7 @@
     {% parent %}
 
     <sw-tabs-item :route="{ name: 'sw.product.detail.mollie', params: { id: $route.params.id } }"
+                  class="product-tab-mollie"
                   title="Mollie">
         Mollie
     </sw-tabs-item>
