--- a/src/Resources/views/storefront/component/delivery-information.html.twig
+++ b/src/Resources/views/storefront/component/delivery-information.html.twig
@@ -7,7 +7,7 @@
         <div class="product-mollie-subscriptions-information">
             <p class="delivery-information mollie-subscriptions">
                 <span class="delivery-status-indicator bg-info"></span>
-                {{ "mollie-subscriptions.product.information"|trans|sw_sanitize }}
+                {{ "molliePayments.subscriptions.product.information"|trans|sw_sanitize }}
             </p>
         </div>
     {% endif %}
