--- a/src/Resources/views/storefront/component/buy-widget/buy-widget-form.html.twig
+++ b/src/Resources/views/storefront/component/buy-widget/buy-widget-form.html.twig
@@ -3,8 +3,8 @@
 {% block buy_widget_buy_container %}
 
     {% if mollie_subscriptions_enabled_beta and product.customFields.mollie_payments_product_subscription_enabled %}
-        <button class="btn btn-primary btn-block btn-buy" title="{{ "mollie-subscriptions.product.addToCartText"|trans|sw_sanitize }}" aria-label="{{ "mollie-subscriptions.product.addToCartText"|trans|sw_sanitize }}">
-            {{ "mollie-subscriptions.product.addToCartText"|trans|sw_sanitize }}
+        <button class="btn btn-primary btn-block btn-buy" title="{{ "molliePayments.subscriptions.product.addToCartText"|trans|sw_sanitize }}" aria-label="{{ "molliePayments.subscriptions.product.addToCartText"|trans|sw_sanitize }}">
+            {{ "molliePayments.subscriptions.product.addToCartText"|trans|sw_sanitize }}
         </button>
     {% else %}
         {{ parent() }}
