--- a/src/Resources/views/storefront/component/product/card/action.html.twig
+++ b/src/Resources/views/storefront/component/product/card/action.html.twig
@@ -35,8 +35,8 @@
 {% block page_product_detail_product_buy_button %}
 
     {% if mollie_subscriptions_enabled_beta and product.customFields.mollie_payments_product_subscription_enabled %}
-        <button class="btn btn-block btn-buy" title="{{ "mollie-subscriptions.product.addToCartText"|trans|sw_sanitize }}">
-            {{ "mollie-subscriptions.product.addToCartText"|trans|sw_sanitize }}
+        <button class="btn btn-block btn-buy" title="{{ "molliePayments.subscriptions.product.addToCartText"|trans|sw_sanitize }}">
+            {{ "molliePayments.subscriptions.product.addToCartText"|trans|sw_sanitize }}
         </button>
     {% else %}
         {{ parent() }}
