--- a/src/Resources/views/storefront/page/account/sidebar.html.twig
+++ b/src/Resources/views/storefront/page/account/sidebar.html.twig
@@ -5,9 +5,9 @@
     {% if not context.customer.guest %}
         {% block page_account_sidebar_link_mollie_subscriptions %}
             <a href="{{ path('frontend.account.mollie.subscriptions.page') }}"
-               title="{{ "account.mollieSubscriptionsLink"|trans|striptags }}"
+               title="{{ "molliePayments.subscriptions.account.mollieSubscriptionsLink"|trans|striptags }}"
                class="list-group-item list-group-item-action account-aside-item{% if activeRoute is same as('frontend.account.mollie.subscriptions.page') %} is-active{% endif %}">
-                {{ "account.mollieSubscriptionsLink"|trans|sw_sanitize }}
+                {{ "molliePayments.subscriptions.account.mollieSubscriptionsLink"|trans|sw_sanitize }}
             </a>
         {% endblock %}
     {% endif %}
