--- a/src/Resources/views/storefront/page/account/subscriptions/subscription-item.html.twig
+++ b/src/Resources/views/storefront/page/account/subscriptions/subscription-item.html.twig
@@ -4,7 +4,7 @@
             <div class="row flex-wrap">
                 {% block page_account_mollie_subscriptions_item_heading %}
                     <h3 class="col-auto order-table-header-heading heading-mollie-subscriptions">
-                        {{ "account.mollieSubscriptionsHeadline"|trans|sw_sanitize }}
+                        {{ "molliePayments.subscriptions.account.mollieSubscriptionsHeadline"|trans|sw_sanitize }}
                         {{ subscription.createdAt | format_date('short', locale=app.request.locale) }}
                     </h3>
                 {% endblock %}
@@ -91,7 +91,7 @@
 
                                             {% block page_account_subscriptions_item_context_menu_reorder_form_button %}
                                                 <button class="order-table-header-context-menu-content-link"
-                                                        type="submit">{{ "account.mollieSubscriptionContextMenuReorder"|trans|sw_sanitize }}</button>
+                                                        type="submit">{{ "molliePayments.subscriptions.account.mollieSubscriptionContextMenuReorder"|trans|sw_sanitize }}</button>
                                             {% endblock %}
                                         </form>
                                     {% endblock %}
@@ -131,7 +131,7 @@
 
                                                 {% block page_account_mollie_subscriptions_item_order_table_body_cell_toggle_subscription_details_button %}
                                                     <button class="order-table-header-context-menu-content-link"
-                                                            type="submit">{{ "account.mollieSubscriptionCancel"|trans|sw_sanitize }}</button>
+                                                            type="submit">{{ "molliePayments.subscriptions.account.mollieSubscriptionCancel"|trans|sw_sanitize }}</button>
                                                 {% endblock %}
                                             </form>
                                         {% endblock %}
@@ -149,10 +149,10 @@
                             <span class="order-table-body-value d-block">{{ subscription.description }}</span>
                         {% endblock %}
                         {% block page_account_mollie_subscriptions_item_price %}
-                            <span class="order-table-body-value d-block">{{ "account.mollieSubscriptionAmount"|trans|sw_sanitize }}: {{ subscription.amount|currency(currencyIsoCode) }}</span>
+                            <span class="order-table-body-value d-block">{{ "molliePayments.subscriptions.account.mollieSubscriptionAmount"|trans|sw_sanitize }}: {{ subscription.amount|currency(currencyIsoCode) }}</span>
                         {% endblock %}
                         {% block page_account_mollie_subscriptions_item_next_payment %}
-                            <span class="order-table-body-value d-block">{{ "account.mollieSubscriptionNextPayment"|trans|sw_sanitize }} {{ subscription.nextPaymentDate| format_date('short', locale=app.request.locale) }}</span>
+                            <span class="order-table-body-value d-block">{{ "molliePayments.subscriptions.account.mollieSubscriptionNextPayment"|trans|sw_sanitize }} {{ subscription.nextPaymentDate| format_date('short', locale=app.request.locale) }}</span>
                         {% endblock %}
                     </div>
                 {% endblock %}
