MOL-818: Show subscription interval on PDP and in checkout

--- a/src/Resources/views/storefront/component/delivery-information.html.twig
+++ b/src/Resources/views/storefront/component/delivery-information.html.twig
@@ -3,11 +3,11 @@
 {% block component_delivery_information %}
     {{ parent() }}
 
-    {% if mollie_subscriptions_enabled_beta and page.product.customFields.mollie_payments_product_subscription_enabled and mollie_subscriptions_indicator_enabled %}
+    {% if  page.extensions.mollieSubscription.isSubscriptionProduct %}
         <div class="product-mollie-subscriptions-information">
             <p class="delivery-information mollie-subscriptions">
                 <span class="delivery-status-indicator bg-info"></span>
-                {{ "molliePayments.subscriptions.product.information"|trans|sw_sanitize }}
+                {{ "molliePayments.subscriptions.product.information"|trans|sw_sanitize }}, {{ page.extensions.mollieSubscription.translatedInterval }}
             </p>
         </div>
     {% endif %}
