--- a/src/Resources/app/storefront/src/scss/account/subscriptions.scss
+++ b/src/Resources/app/storefront/src/scss/account/subscriptions.scss
@@ -53,6 +53,9 @@
   padding: 0 !important;
 }
 
+.btn-mollie-subscription-cancel {
+  color: #e60909;
+}
 .subscription-edit-shipping-address-modal,
 .subscription-edit-billing-address-modal {
   .modal-dialog {
