MOL-714: Subscription update billing and shipping address

--- a/src/Resources/views/storefront/page/account/subscriptions/subscription-item.html.twig
+++ b/src/Resources/views/storefront/page/account/subscriptions/subscription-item.html.twig
@@ -14,8 +14,7 @@
                         {% block page_account_mollie_subscriptions_item_status %}
                             <div class="order-table-header-order-status">
                                 {% block page_account_mollie_subscriptions_item_status_badge %}
-                                    <span
-                                            class="badge badge-lg order-item-status-badge order-item-status-badge-{{ subscription.mollieStatus }}">
+                                    <span class="badge badge-lg order-item-status-badge order-item-status-badge-{{ subscription.mollieStatus }}">
                                             {{ subscription.mollieStatus }}
                                         </span>
                                 {% endblock %}
