MOL-713: Subscription Update Payment Mandate (#351)

--- a/src/Resources/views/storefront/page/account/subscriptions/subscription-item.html.twig
+++ b/src/Resources/views/storefront/page/account/subscriptions/subscription-item.html.twig
@@ -14,8 +14,7 @@
                         {% block page_account_mollie_subscriptions_item_status %}
                             <div class="order-table-header-order-status">
                                 {% block page_account_mollie_subscriptions_item_status_badge %}
-                                    <span
-                                            class="badge badge-lg order-item-status-badge order-item-status-badge-{{ subscription.mollieStatus }}">
+                                    <span class="badge badge-lg order-item-status-badge order-item-status-badge-{{ subscription.mollieStatus }}">
                                             {{ subscription.mollieStatus }}
                                         </span>
                                 {% endblock %}
@@ -90,8 +89,22 @@
                                             {% endblock %}
 
                                             {% block page_account_subscriptions_item_context_menu_reorder_form_button %}
-                                                <button class="order-table-header-context-menu-content-link"
-                                                        type="submit">{{ "molliePayments.subscriptions.account.mollieSubscriptionContextMenuReorder"|trans|sw_sanitize }}</button>
+                                                <button class="order-table-header-context-menu-content-link" type="submit">{{ "molliePayments.subscriptions.account.mollieSubscriptionContextMenuReorder"|trans|sw_sanitize }}</button>
+                                            {% endblock %}
+                                        </form>
+                                    {% endblock %}
+                                {% endblock %}
+
+                                {% block page_account_subscriptions_item_context_menu_update_payment %}
+                                    {% block page_account_subscriptions_item_context_menu_update_payment_form %}
+                                        <form action="{{ path('frontend.account.mollie.subscriptions.payment.update', { 'subscriptionId': subscription.id }) }}"
+                                              method="post"
+                                              class="order-table-header-context-menu-content-form">
+                                            {% block page_account_subscriptions_item_context_menu_update_payment_form_csrf %}
+                                                {{ sw_csrf('frontend.account.mollie.subscriptions.payment.update') }}
+                                            {% endblock %}
+                                            {% block page_account_subscriptions_item_context_menu_update_payment_form_button %}
+                                                <button class="order-table-header-context-menu-content-link" type="submit">Update Payment</button>
                                             {% endblock %}
                                         </form>
                                     {% endblock %}
