NTR: don’t allow subscription changes if not active

--- a/src/Resources/views/storefront/page/account/subscriptions/subscription-item.html.twig
+++ b/src/Resources/views/storefront/page/account/subscriptions/subscription-item.html.twig
@@ -96,18 +96,20 @@
                                 {% endblock %}
 
                                 {% block page_account_subscriptions_item_context_menu_update_payment %}
-                                    {% block page_account_subscriptions_item_context_menu_update_payment_form %}
-                                        <form action="{{ path('frontend.account.mollie.subscriptions.payment.update', { 'subscriptionId': subscription.id }) }}"
-                                              method="post"
-                                              class="order-table-header-context-menu-content-form">
-                                            {% block page_account_subscriptions_item_context_menu_update_payment_form_csrf %}
-                                                {{ sw_csrf('frontend.account.mollie.subscriptions.payment.update') }}
-                                            {% endblock %}
-                                            {% block page_account_subscriptions_item_context_menu_update_payment_form_button %}
-                                                <button class="order-table-header-context-menu-content-link" type="submit">Update Payment</button>
-                                            {% endblock %}
-                                        </form>
-                                    {% endblock %}
+                                    {% if(subscription.isActive) %}
+                                        {% block page_account_subscriptions_item_context_menu_update_payment_form %}
+                                            <form action="{{ path('frontend.account.mollie.subscriptions.payment.update', { 'subscriptionId': subscription.id }) }}"
+                                                  method="post"
+                                                  class="order-table-header-context-menu-content-form">
+                                                {% block page_account_subscriptions_item_context_menu_update_payment_form_csrf %}
+                                                    {{ sw_csrf('frontend.account.mollie.subscriptions.payment.update') }}
+                                                {% endblock %}
+                                                {% block page_account_subscriptions_item_context_menu_update_payment_form_button %}
+                                                    <button class="order-table-header-context-menu-content-link" type="submit">Update Payment</button>
+                                                {% endblock %}
+                                            </form>
+                                        {% endblock %}
+                                    {% endif %}
                                 {% endblock %}
 
                                 {% block page_account_subscriptions_item_context_menu_cancel %}
@@ -121,7 +123,7 @@
                                         {% endblock %}
                                     {% endset %}
 
-                                    {% if(subscription.status != 'canceled') %}
+                                    {% if(subscription.isActive) %}
                                         {% block page_account_subscriptions_item_context_menu_cancel_form %}
                                             <form action="{{ cancelAction }}" id="subscriptionsDetailForm-{{ subscriptions.Id }}" method="post">
 
